Development Portal (2019-01-06 shi)
==============================
Add transaction-type count and hide buttons
Update colours for chart lines of transaction-type


Development Portal (2019-01-05 shi)
==============================
Fix transaction count for new sections
Add transaction table headers for new sections
Hide transaction-type in tables for SAVi
Update css for planned-disbursement and budget tables
Update all themes and print-friendly css
Sticky headers tryout
Chartists in SAVi tryout
Update css for chartists
Update padding (n+2) participating-org 
Change font-size for result dates in SAVi


Development Portal (2019-01-04 shi)
==============================
Hide policy-marker in refine search
Display budget type for planned-disbursement
Update planned-disbursement table in SAVi
Display organisation type in transaction
Update all themes with organisation type
Update print-friendly css
Update font-size for tables in SAVi
Layout work on #506


Development Portal (2019-01-03 shi)
==============================
Fix humanitarian tag for Chrome
Add withdrawn codes to import
Display withdrawn in search dropdown
Update all css
Add humanitarian-scope to import
Display humanitarian-scope in SAVi
Update all themes with new element
Fix narrative css in location name
Display ref attributes in participating-org
Display ref attributes in provider-org
Display ref attributes in receiver-org
Update print-friendly css


Development Portal (2019-01-02 shi)
==============================
Update css for all themes with new sections
Minor css fixes
Add humanitarian tag in print-friendly css
Remove list numbers for location, policy markers, family tree


Development Portal (2018-12-19 shi)
==============================
Add activity-scope code list to iati_codes.js
Update css for all themes
Don't display activity-scope if empty
Don't display activity-status if empty
Don't display reporting-org if empty
Display humanitarian tag if declared in transaction

