@@ -2,6 +2,7 @@ Development Portal (2019-01-06 shi)
 ==============================
 Add transaction-type count and hide buttons
 Update colours for chart lines of transaction-type
+Add blank tags for missing columns in planned-disbursement
 
 
 Development Portal (2019-01-05 shi)
